--- a/build.gradle
+++ b/build.gradle
@@ -1,52 +1,58 @@
 plugins {
-    id 'java'
+    id 'java-library'
     id "io.qameta.allure" version "2.9.6"
 }
-
-group 'guru.qa'
-version '1.0'
 
 repositories {
     mavenCentral()
 }
 
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
-    }
-}
-
-compileTestJava {
-    options.encoding = 'UTF-8'
-}
-
-dependencies {
-    // Selenide
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2',
-            'com.codeborne:selenide:6.4.0',
-            'io.qameta.allure:allure-selenide:2.17.3'
-    testRuntimeOnly("org.slf4j:slf4j-simple:1.7.32")
-
-    // JUnit 5
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.2")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.2")
-
-}
+def allureVersion = "2.17.3",
+    selenideVersion = "6.4.0",
+    junitVersion = "5.8.2",
+    slf4jVersion = "1.7.32"
 
 allure {
     report {
-        version.set("2.17.3") // это версия Allure Report (https://github.com/allure-framework/allure2)
+        version.set(allureVersion)
     }
     adapter {
-        aspectjWeaver.set(true) // обработка аннотации @Step
+        aspectjWeaver.set(true)
         frameworks {
             junit5 {
-                adapterVersion.set("2.17.3") // это версия Allure JUnit5 (https://github.com/allure-framework/allure-java)
+                adapterVersion.set(allureVersion)
             }
         }
     }
 }
 
-test {
-    useJUnitPlatform{}
+dependencies {
+    testImplementation(
+            "com.codeborne:selenide:$selenideVersion",
+            "io.qameta.allure:allure-selenide:$allureVersion",
+            "org.junit.jupiter:junit-jupiter:$junitVersion",
+            "org.slf4j:slf4j-simple:$slf4jVersion"
+    )
 }
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
+tasks.withType(Test) {
+    useJUnitPlatform()
+
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
+}
+
+//task demoqa_tests(type: Test) {
+//    useJUnitPlatform{
+//        includeTags "demoqa"
+////        excludeTags "simple"
+//    }
+//}
