--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ tasks.withType(Test) {
 
 task demoqa_tests(type: Test) {
     useJUnitPlatform{
-        includeTags "demoQA"
+        includeTags "demoqa"
 //        excludeTags "simple"
     }
 }
